Update documentation: suggestion from Roberto Spreafico regarding DISPLAY settings on Linux